--- a/web.UI/src/app/hr/hr.component.html
+++ b/web.UI/src/app/hr/hr.component.html
@@ -1,37 +1,1 @@
-<div class="dashboard">
-    <input type="checkbox" id="menu-toggle">
-    <div class="sidebar">
-        <div class="logo">
-            <img src="assets/images/logo.png" alt="Logo">
-        </div>
-        <button class="sidebar-btn">User Dashboard</button>
-        <button class="sidebar-btn">Admin Dashboard</button>
-        <button class="sidebar-btn">Book a Service</button>
-        <button class="sidebar-btn">View Bookings</button>
-        <button class="sidebar-btn">Delete Account</button>
-        <button class="sidebar-btn">Change Password</button>
-        <button class="sidebar-btn">All Bookings</button>
-        <button class="sidebar-btn">Add Feedbacks</button>
-        <button class="sidebar-btn">View Feedbacks</button>
-        <button class="sidebar-btn">Add Services</button>
-    </div>
-    <div class="main-content">
-        <div class="main-content">
-            <div class="header">
-                <label for="menu-toggle" class="hamburger">&#9776;</label>
-                <div class="welcome">Welcome, <span id="username"></span></div>
-                <div class="dashboard-name">GharSewa ADMIN</div>
-                <div class="profile-dropdown">
-                    <button class="profile-btn">Profile</button>
-                    <div class="dropdown-content">
-                        <button class="btn btn-primary">Edit Profile</button>
-                        <button class="btn btn-primary">View Profile</button>
-                        <button class="btn btn-primary">Logout</button>
-                    </div>
-                </div>
-            </div>
-            <div class="content">
-                
-            </div>
-        </div>
-    </div>
+<p>hr works!</p>
