--- a/web.UI/src/app/Account/log-in/log-in.component.html
+++ b/web.UI/src/app/Account/log-in/log-in.component.html
@@ -1,1 +1,24 @@
-<p>log-in works!</p>
+<form (ngSubmit)="onSubmit()" #loginForm="ngForm">
+    <div class="form-field">
+      <div class="form-group">
+        <label for="username">Username</label>
+        <input type="text" class="form-control" id="username" [(ngModel)]="loginRequest.username" name="username" required>
+        <div *ngIf="loginForm.form.controls['username']?.invalid && loginForm.form.controls['username']?.touched" class="text-danger">
+          Username is required
+        </div>
+      </div>
+    </div>
+  
+    <div class="form-field">
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" id="password" [(ngModel)]="loginRequest.password" name="password" required>
+        <div *ngIf="loginForm.form.controls['password']?.invalid && loginForm.form.controls['password']?.touched" class="text-danger">
+          Password is required
+        </div>
+      </div>
+    </div>
+  
+    <button type="submit" class="btn btn-primary">Login</button>
+  </form>
+  
