adding Admin Dashboard feature

--- a/web.UI/src/app/admin/admin.component.html
+++ b/web.UI/src/app/admin/admin.component.html
@@ -1,28 +1,2 @@
-<div class="admin-dashboard">
-    <h1>Admin Dashboard</h1>
-    <div class="dashboard-cards">
-      <div class="card">
-        <h3>Users</h3>
-        <p>Manage all users</p>
-      </div>
-      <div class="card">
-        <h3>Settings</h3>
-        <p>Adjust application settings</p>
-      </div>
-    
-      <div class="dropdown" bsDropdown>
-        <button type="button" class="btn btn-primary dropdown-toggle" bsDropdownToggle>
-          Add
-        </button>
-        <ul *bsDropdownMenu class="dropdown-menu">
-          <li><a class="dropdown-item" href="#">Department</a></li>
-          <li><a class="dropdown-item" href="#">Designation</a></li>
-          <li><a class="dropdown-item" href="#">Something else here</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  
 
-    
-   <h5>hello Admin</h5>
+<app-admin-dash-board></app-admin-dash-board>
