Adding some feature in Admin

--- a/web.UI/src/app/admin/admin.component.html
+++ b/web.UI/src/app/admin/admin.component.html
@@ -8,7 +8,7 @@
         Add
       </button>
       <ul *bsDropdownMenu class="dropdown-menu">
-        <li><a class="dropdown-item" [routerLink]="['/app-admin/department']">Department</a></li>
+        <li><a class="dropdown-item" [routerLink]="['/app-admin/app-department-list']">Department</a></li>
         <li><a class="dropdown-item" [routerLink]="['/app-admin/designation']">Designation</a></li>
         <li><a class="dropdown-item" [routerLink]="['/app-admin/something-else']">Something else here</a></li>
       </ul>
