adding getdepartmentwithdesignation In Both UIand API

--- a/web.UI/src/app/admin/admin.component.html
+++ b/web.UI/src/app/admin/admin.component.html
@@ -21,7 +21,9 @@
       </button>
       <ul *bsDropdownMenu class="dropdown-menu">
         <li><a class="dropdown-item" [routerLink]="['/app-admin/employees-with-salary']">EmployeesWithSalary</a></li>
-        <li><a class="dropdown-item" [routerLink]="['/app-admin/designation']">Designation</a></li>
+        
+        <li><a class="dropdown-item" [routerLink]="['/app-admin/app-dapartmentwith-designation']">DepartmentWithDesignation</a></li>
+
         <li><a class="dropdown-item" [routerLink]="['/app-admin/something-else']">Something else here</a></li>
       </ul>
     </div>
