--- a/web.UI/src/app/admin/admin.component.html
+++ b/web.UI/src/app/admin/admin.component.html
@@ -9,8 +9,9 @@
       </button>
       <ul *bsDropdownMenu class="dropdown-menu">
         <li><a class="dropdown-item" [routerLink]="['/app-admin/app-department-list']">Department</a></li>
-        <li><a class="dropdown-item" [routerLink]="['/app-admin/designation']">Designation</a></li>
+        <li><a class="dropdown-item" [routerLink]="['/app-admin/app-designation-list']">Designation</a></li>
         <li><a class="dropdown-item" [routerLink]="['/app-admin/something-else']">Something else here</a></li>
+     
       </ul>
     </div>
     
@@ -21,7 +22,7 @@
       </button>
       <ul *bsDropdownMenu class="dropdown-menu">
         <li><a class="dropdown-item" [routerLink]="['/app-admin/employees-with-salary']">EmployeesWithSalary</a></li>
-        <li><a class="dropdown-item" [routerLink]="['/app-admin/designation']">Designation</a></li>
+        <li><a class="dropdown-item" [routerLink]="['/app-admin/app-dapartmentwith-designation']">DepartmentWithDesignation</a></li>
         <li><a class="dropdown-item" [routerLink]="['/app-admin/something-else']">Something else here</a></li>
       </ul>
     </div>
