--- a/web.UI/src/app/hr/hr.component.html
+++ b/web.UI/src/app/hr/hr.component.html
@@ -1,6 +1,6 @@
-<div class="admin-dashboard">
+<div class="hr-dashboard">
   <div class="dashboard-sidebar">
-    <h6>Admin Dashboard</h6>
+    <h6>HR-Dashboard</h6>
     
     <!-- Add Section -->
     <div class="dropdown" bsDropdown>
@@ -8,9 +8,9 @@
         Add
       </button>
       <ul *bsDropdownMenu class="dropdown-menu">
-        <li><a class="dropdown-item" [routerLink]="['/app-admin/app-department-list']">Department</a></li>
-        <li><a class="dropdown-item" [routerLink]="['/app-admin/app-designation-list']">Designation</a></li>
-        <li><a class="dropdown-item" [routerLink]="['/app-admin/something-else']">Something else here</a></li>
+        <li><a class="dropdown-item" [routerLink]="['/app-hr/app-employee']">Employee</a></li>
+        <li><a class="dropdown-item" [routerLink]="['/app-hr/app-assign-employee']">AssignEmployee</a></li>
+       
      
       </ul>
     </div>
@@ -21,31 +21,18 @@
         Views
       </button>
       <ul *bsDropdownMenu class="dropdown-menu">
-        <li><a class="dropdown-item" [routerLink]="['/app-admin/employees-with-salary']">EmployeesWithSalary</a></li>
-        <li><a class="dropdown-item" [routerLink]="['/app-admin/app-dapartmentwith-designation']">DepartmentWithDesignation</a></li>
-        <li><a class="dropdown-item" [routerLink]="['/app-admin/something-else']">Something else here</a></li>
+        <li><a class="dropdown-item" [routerLink]="['/app-hr/']">EmployeeList</a></li>
+        <li><a class="dropdown-item" [routerLink]="['/app-hr/']">DepartmentWithDesignation</a></li>
+       
       </ul>
     </div>
-    
-    <!-- Work of Roles Section -->
-    <div class="dropdown" bsDropdown>
-      <button type="button" class="btn btn-primary dropdown-toggle" bsDropdownToggle>
-        Work of Roles
-      </button>
-      <ul *bsDropdownMenu class="dropdown-menu">
-        <li><a class="dropdown-item" [routerLink]="['/app-admin/app-roles']">Roles Work</a></li>
-        
-      </ul>
-    </div>
-    
-    <!-- Additional Links -->
-    <div class="dashboard-links">
-      <a class="dropdown-item" [routerLink]="['/app-admin/users']">Users</a>
-      <a class="dropdown-item" [routerLink]="['/app-admin/settings']">Settings</a>
-    </div>
+
   </div>
 
   <div class="dashboard-content">
     <router-outlet></router-outlet> <!-- Correct syntax for child route rendering -->
   </div>
+
+
+
 </div>
