--- a/web.UI/src/app/hr/hr.component.html
+++ b/web.UI/src/app/hr/hr.component.html
@@ -8,7 +8,7 @@
         Add
       </button>
       <ul *bsDropdownMenu class="dropdown-menu">
-        <li><a class="dropdown-item" [routerLink]="['/app-hr/app-employee']">Employee</a></li>
+        <li><a class="dropdown-item" [routerLink]="['/app-hr/app-employee-create']">Employee</a></li>
         <li><a class="dropdown-item" [routerLink]="['/app-hr/app-assign-employee']">AssignEmployee</a></li>
        
      
@@ -21,7 +21,7 @@
         Views
       </button>
       <ul *bsDropdownMenu class="dropdown-menu">
-        <li><a class="dropdown-item" [routerLink]="['/app-hr/']">EmployeeList</a></li>
+        <li><a class="dropdown-item" [routerLink]="['/app-hr/app-employee-list']">EmployeeList</a></li>
         <li><a class="dropdown-item" [routerLink]="['/app-hr/']">DepartmentWithDesignation</a></li>
        
       </ul>
