--- a/web.UI/src/app/hr/employee-edit/employee-edit.component.html
+++ b/web.UI/src/app/hr/employee-edit/employee-edit.component.html
@@ -1,29 +1,30 @@
-<p>employee-edit works!</p>
+
 <div>
-    <h2>Edit Employee</h2>
-    <form (ngSubmit)="onSubmit()">
-      <label>Name:
-        <input [(ngModel)]="employee.name" name="name" required>
-      </label>
-      <label>Email:
-        <input [(ngModel)]="employee.email" name="email" required>
-      </label>
-      <label>Phone:
-        <input [(ngModel)]="employee.phone" name="phone" required>
-      </label>
-      <label>Date of Birth:
-        <input [(ngModel)]="employee.dateOfBirth" name="dateOfBirth" type="date" required>
-      </label>
-      <label>Address:
-        <input [(ngModel)]="employee.address" name="address" required>
-      </label>
-      <label>Hire Date:
-        <input [(ngModel)]="employee.hireDate" name="hireDate" type="date" required>
-      </label>
-      <label>Image:
-        <input type="file" (change)="onFileChange($event)">
-      </label>
-      <button type="submit">Update</button>
-    </form>
-  </div>
-  
+  <h2>Edit Employee</h2>
+  <form (ngSubmit)="onSubmit()">
+    <label>Name:
+      <input [(ngModel)]="employee.name" name="name" required>
+    </label>
+    <label>Email:
+      <input [(ngModel)]="employee.email" name="email" required>
+    </label>
+    <label>Phone:
+      <input [(ngModel)]="employee.phone" name="phone" required>
+    </label>
+    <label>Date of Birth:
+      <input [(ngModel)]="employee.dateOfBirth" name="dateOfBirth" type="date" required>
+    </label>
+    <label>Address:
+      <input [(ngModel)]="employee.address" name="address" required>
+    </label>
+    <label>Hire Date:
+      <input [(ngModel)]="employee.hireDate" name="hireDate" type="date" required>
+    </label>
+    <label>Image:
+      <!-- Display the image if URL is available -->
+      <img *ngIf="employee.imageUrl" [src]="employee.imageUrl" alt="Employee Image" style="max-width: 100px; max-height: 100px;">
+      <input type="file" (change)="onFileChange($event)">
+    </label>
+    <button type="submit">Update</button>
+  </form>
+</div>
