--- a/web.UI/src/app/hr/employee-list/employee-list.component.html
+++ b/web.UI/src/app/hr/employee-list/employee-list.component.html
@@ -1,6 +1,6 @@
-<div>
+<!-- <div>
     <h2>Employee List</h2>
-    <button routerLink="/employees/create">Add New Employee</button>
+    
     <table>
       <thead>
         <tr>
@@ -19,6 +19,36 @@
             <button *ngIf="employee.employeeId" (click)="editEmployee(employee.employeeId)">Edit</button>
            <button *ngIf="employee.employeeId" (click)="deleteEmployee(employee.employeeId)">Delete</button>
 
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div> -->
+  
+  <div class="employee-list-container">
+    <h2 class="title">Employee List</h2>
+    
+    <table class="table table-bordered table-striped">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Email</th>
+          <th>Phone</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let employee of employees">
+          <td>{{ employee.name }}</td>
+          <td>{{ employee.email }}</td>
+          <td>{{ employee.phone }}</td>
+          <td>
+            <button *ngIf="employee.employeeId" class="btn btn-primary" (click)="editEmployee(employee.employeeId)">
+              Edit
+            </button>
+            <button *ngIf="employee.employeeId" class="btn btn-danger" (click)="deleteEmployee(employee.employeeId)">
+              Delete
+            </button>
           </td>
         </tr>
       </tbody>
