--- a/web.UI/src/app/hr/hr.component.html
+++ b/web.UI/src/app/hr/hr.component.html
@@ -22,7 +22,7 @@
       </button>
       <ul *bsDropdownMenu class="dropdown-menu">
         <li><a class="dropdown-item" [routerLink]="['/app-hr/app-employee-list']">EmployeeList</a></li>
-        <li><a class="dropdown-item" [routerLink]="['/app-hr/']">DepartmentWithDesignation</a></li>
+        <li><a class="dropdown-item" [routerLink]="['/app-hr/app-employee-detail-list']">DepartmentWithDesignation</a></li>
        
       </ul>
     </div>
