--- a/web.UI/src/app/hr/employee-create/employee-create.component.html
+++ b/web.UI/src/app/hr/employee-create/employee-create.component.html
@@ -93,6 +93,8 @@
       
       <div class="text-center">
         <button type="submit" class="btn btn-primary btn-lg">Create</button>
+        <button type="button" class="btn btn-secondary btn-lg" (click)="cancel()">Cancel</button>
+
       </div>
     </form>
   </div>
