--- a/web.UI/src/app/hr/employee-detail-list/employee-detail-list.component.html
+++ b/web.UI/src/app/hr/employee-detail-list/employee-detail-list.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+  <!-- <div class="container mt-5">
   <div class="shadow p-4">
     <h4>Employee Details List</h4>
     <table class="table table-striped">
@@ -23,4 +23,37 @@
       </tbody>
     </table>
   </div>
+</div>   -->
+<div class="container mt-5">
+  <div class="shadow p-4 text-center">
+    <h4 class="employee-list-heading">Employee Details List</h4>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Employee</th>
+          <th>Department</th>
+          <th>Designation</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let detail of employeeDetails">
+          <td>{{ detail.employeeName }}</td>
+          <td>{{ detail.departmentName }}</td>
+          <td>{{ detail.designationTitle }}</td>
+          <td>
+            <button class="btn btn-warning btn-sm" (click)="editEmployeeDetail(detail.employeeDetailId)">Edit</button>
+            <button class="btn btn-danger btn-sm" (click)="deleteEmployeeDetail(detail.employeeDetailId)">Delete</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
+
+
+
+
+
+
+
