--- a/web.UI/src/app/admin/admin.component.html
+++ b/web.UI/src/app/admin/admin.component.html
@@ -24,7 +24,8 @@
         <li><a class="dropdown-item" [routerLink]="['/app-admin/app-dapartmentwith-designation']">DepartmentWithDesignation</a></li>
         <li><a class="dropdown-item" [routerLink]="['/app-admin/app-department-list']">DepartmentList</a></li>
         <li><a class="dropdown-item" [routerLink]="['/app-admin/app-designation-list']">DesignationList</a></li>
-       
+     
+        <li><a class="dropdown-item" [routerLink]="['app-message']">Message</a></li>
       </ul>
     </div>
     
