--- a/web.UI/src/app/hr/hr.component.html
+++ b/web.UI/src/app/hr/hr.component.html
@@ -23,7 +23,7 @@
       <ul *bsDropdownMenu class="dropdown-menu">
         <li><a class="dropdown-item" [routerLink]="['/app-hr/app-employee-list']">EmployeeList</a></li>
         <li><a class="dropdown-item" [routerLink]="['/app-hr/app-employee-detail-list']">DepartmentWithDesignation</a></li>
-
+        <li><a class="dropdown-item" [routerLink]="['app-message']">Message</a></li>
 
      
       </ul>
