--- a/web.UI/src/app/message/message.component.html
+++ b/web.UI/src/app/message/message.component.html
@@ -1,7 +1,7 @@
-<p>message works!</p>
 
 
-<div class="row mb-4">
+
+<!-- <div class="row mb-4">
     <div class="btn-group" name="container">
       <button
         class="btn bg-dark"
@@ -45,7 +45,7 @@
       btnRadio="Outbox"
       ngDefaultControl
       [ngClass]="{'active': container === 'Outbox'}"
-      (click)="container='Outbox'; loadMessages()"
+      (click)="container='Outbox'; loadUserWithRole()"
     >
       <i class="fa fa-paper-plane"></i> Search Users
     </button>
@@ -93,5 +93,127 @@
       [directionLinks]="true"
       [autoHide]="true">
     </pagination-controls>
+  </div> -->
+  <div class="row mb-4">
+    <div class="btn-group" name="container">
+      <!-- Messages Buttons -->
+      <button
+        class="btn bg-dark"
+        style="color: white;"
+        [(ngModel)]="container"
+        ngDefaultControl
+        btnRadio="Unread"
+        [ngClass]="{'active': container === 'Unread'}"
+        (click)="container='Unread'; loadMessages()"
+      >
+        <i class="fa fa-envelope"></i> Unread
+      </button>
+  
+      <button
+        class="btn bg-dark"
+        style="color: white;"
+        [(ngModel)]="container"
+        btnRadio="Inbox"
+        ngDefaultControl
+        [ngClass]="{'active': container === 'Inbox'}"
+        (click)="container='Inbox'; loadMessages()"
+      >
+        <i class="fa fa-envelope-open"></i> Inbox
+      </button>
+  
+      <button
+        class="btn bg-dark"
+        style="color: white;"
+        [(ngModel)]="container"
+        btnRadio="Outbox"
+        ngDefaultControl
+        [ngClass]="{'active': container === 'Outbox'}"
+        (click)="container='Outbox'; loadMessages()"
+      >
+        <i class="fa fa-paper-plane"></i> Outbox
+      </button>
+  
+      <!-- Search Users Button -->
+      <button
+        class="btn bg-dark"
+        style="color: white;"
+        [(ngModel)]="container"
+        btnRadio="SearchUsers"
+        ngDefaultControl
+        [ngClass]="{'active': container === 'SearchUsers'}"
+        (click)="container='SearchUsers'; loadUserWithRole()"
+      >
+        <i class="fa fa-user"></i> Search Users
+      </button>
+    </div>
   </div>
   
+  <!-- Display messages -->
+  <div *ngIf="container !== 'SearchUsers'">
+    <div class="row" *ngIf="messages?.length === 0">
+      <h3>No Messages</h3>
+    </div>
+  
+    <div class="row" *ngIf="messages?.length > 0">
+      <table class="table table-hover" style="cursor: pointer;">
+        <tr>
+          <th style="width: 40%;">Messages</th>
+          <th style="width: 20%;">{{ container === 'Outbox' ? 'To' : 'From' }}</th>
+          <th style="width: 20%;">{{ container === 'Outbox' ? 'Sent' : 'Received' }}</th>
+          <th style="width: 20%;"></th>
+        </tr>
+  
+        <tr *ngFor="let message of messages" (click)="navigateToMessageThread(message.senderUsername)">
+          <td>{{ message.content }}</td>
+          <td>
+            <div *ngIf="container === 'Outbox'">
+              <strong>{{ message.recipientUsername }}</strong>
+            </div>
+            <div *ngIf="container !== 'Outbox'">
+              <strong>{{ message.senderUsername }}</strong>
+            </div>
+          </td>
+          <td>{{ message.messageSent | timeago }}</td>
+          <td>
+            <button (click)="$event.stopPropagation(); deleteMessage(message.id)" class="btn btn-danger">Delete</button>
+          </td>
+        </tr>
+      </table>
+    </div>
+  
+    <div class="d-flex justify-content-center" *ngIf="pagination && !loading && messages?.length > 0">
+      <pagination-controls 
+        (pageChange)="pageChanged($event)"
+        [maxSize]="5"
+        [directionLinks]="true"
+        [autoHide]="true">
+      </pagination-controls>
+    </div>
+  </div>
+  
+ <!-- Display users with roles -->
+<div *ngIf="container === 'SearchUsers'">
+  <div class="row" *ngIf="usersWithRoles?.length === 0">
+    <h3>No Users Found</h3>
+  </div>
+
+  <div class="row" *ngIf="usersWithRoles?.length > 0">
+    <table class="table table-hover" style="cursor: pointer;">
+      <tr>
+        <th style="width: 40%;">Username</th>
+        <th style="width: 30%;">Email</th>
+        <th style="width: 30%;">Roles</th>
+      </tr>
+
+      <tr *ngFor="let user of usersWithRoles" (click)="navigateToMessageThread(user.username)">
+        <td>{{ user.username }}</td>
+        <td>{{ user.email }}</td>
+        <td>
+          <ul>
+            <li *ngFor="let role of user.roles">{{ role }}</li>
+          </ul>
+        </td>
+      </tr>
+    </table>
+  </div>
+</div>
